--- a/alerts.html
+++ b/alerts.html
@@ -335,7 +335,7 @@
     </footer>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="shared-notifications.js"></script>
-    <script src="alerts.js"></script>
+    <script src="shared-notifications.js?v=2"></script>
+    <script src="alerts.js?v=2"></script>
 </body>
 </html>
