--- a/data-explorer.html
+++ b/data-explorer.html
@@ -322,7 +322,7 @@
         </div>
     </footer>
 
-    <script src="shared-notifications.js"></script>
-    <script src="data-explorer.js"></script>
+    <script src="shared-notifications.js?v=2"></script>
+    <script src="data-explorer.js?v=2"></script>
 </body>
 </html>
