--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="shared-notifications.js"></script>
-    <script src="script.js"></script>
+    <script src="shared-notifications.js?v=11"></script>
+    <script src="script.js?v=11"></script>
 </body>
 </html>
