--- a/stations.html
+++ b/stations.html
@@ -294,7 +294,7 @@
         </div>
     </footer>
 
-    <script src="shared-notifications.js"></script>
-    <script src="stations.js"></script>
+    <script src="shared-notifications.js?v=2"></script>
+    <script src="stations.js?v=2"></script>
 </body>
 </html>
