--- a/data-explorer.html
+++ b/data-explorer.html
@@ -104,6 +104,9 @@
 
     <!-- Sidebar -->
     <nav class="sidebar" id="sidebar">
+        <button class="sidebar-close" id="sidebarClose">
+            <i class="fas fa-times"></i>
+        </button>
         <ul class="nav-menu">
             <li class="nav-item">
                 <a href="index.html" class="nav-link">
@@ -322,7 +325,7 @@
         </div>
     </footer>
 
-    <script src="shared-notifications.js?v=2"></script>
-    <script src="data-explorer.js?v=2"></script>
+    <script src="shared-notifications.js?v=21"></script>
+    <script src="data-explorer.js?v=21"></script>
 </body>
 </html>
