--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 
     <!-- Sidebar -->
     <nav class="sidebar" id="sidebar">
+        <button class="sidebar-close" id="sidebarClose" style="display: none;">
+            <i class="fas fa-times"></i>
+        </button>
         <ul class="nav-menu">
             <li class="nav-item active">
                 <a href="index.html" class="nav-link">
@@ -340,7 +343,7 @@
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="shared-notifications.js?v=11"></script>
-    <script src="script.js?v=11"></script>
+    <script src="shared-notifications.js?v=22"></script>
+    <script src="script.js?v=22"></script>
 </body>
 </html>
