--- a/alerts.html
+++ b/alerts.html
@@ -105,6 +105,9 @@
 
     <!-- Sidebar -->
     <nav class="sidebar" id="sidebar">
+        <button class="sidebar-close" id="sidebarClose">
+            <i class="fas fa-times"></i>
+        </button>
         <ul class="nav-menu">
             <li class="nav-item">
                 <a href="index.html" class="nav-link">
@@ -335,7 +338,7 @@
     </footer>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="shared-notifications.js?v=2"></script>
-    <script src="alerts.js?v=2"></script>
+    <script src="shared-notifications.js?v=21"></script>
+    <script src="alerts.js?v=21"></script>
 </body>
 </html>
