--- a/stations.html
+++ b/stations.html
@@ -104,6 +104,9 @@
 
     <!-- Sidebar -->
     <nav class="sidebar" id="sidebar">
+        <button class="sidebar-close" id="sidebarClose">
+            <i class="fas fa-times"></i>
+        </button>
         <ul class="nav-menu">
             <li class="nav-item">
                 <a href="index.html" class="nav-link">
@@ -294,7 +297,7 @@
         </div>
     </footer>
 
-    <script src="shared-notifications.js?v=2"></script>
-    <script src="stations.js?v=2"></script>
+    <script src="shared-notifications.js?v=21"></script>
+    <script src="stations.js?v=21"></script>
 </body>
 </html>
