--- a/stations.html
+++ b/stations.html
@@ -133,9 +133,9 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="help.html" class="nav-link">
-                    <i class="fas fa-question-circle"></i>
-                    <span>Help</span>
+                <a href="forecasting.html" class="nav-link">
+                    <i class="fas fa-chart-area"></i>
+                    <span>Forecasting</span>
                 </a>
             </li>
         </ul>
